# stld2

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  stld.cabal
ansible/: main-playbook.yml
ansible/group_vars/: sample
ansible/inventory/: development
ansible/playbooks/common/: all.yml
ansible/playbooks/common/files/: stld.conf.j2
ansible/playbooks/common/filesystem/: configure.yml
ansible/playbooks/common/nginx/: install.yml
ansible/playbooks/common/nginx/files/: nginx.conf  stld.conf.j2
ansible/playbooks/common/postgres/: setup.yml
ansible/playbooks/development/: all.yml
config/: database.sample.json
migrations/: 01_tables_creation.sql
src/main/: Main.hs  Migrate.hs  Response.hs
src/main/Models/: RecurringTask.hs  UniqueTask.hs
src/main/Models/RecurringTask/: Fields.hs  TH.hs
src/main/Models/UniqueTask/: Fields.hs  TH.hs
src/main/Persistence/: DBConnection.hs  Queries.hs
src/main/Presenters/: JSONOptions.hs  RecurringTask.hs  TaskList.hs  UniqueTask.hs
src/main/Responses/: TaskList.hs
src/main/Services/: Task.hs
