name:                stld
version:             0.1.0.0
synopsis:            Agile-inspired TODO list
license:             MIT
license-file:        LICENSE
author:              Thomas Franquelin & Emmanuelle Poirier
maintainer:          ostapneko@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable stld
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.6 && <4.7,
                       aeson ==0.6.2.1,
                       bytestring ==0.10.0.2,
                       http-types ==0.8.3,
                       mtl ==2.1.2,
                       postgresql-simple ==0.4.0.1,
                       scotty ==0.6.2,
                       text ==1.0.0.1,
                       unordered-containers ==0.2.3.3
  hs-source-dirs:      src/main
  default-language:    Haskell2010
